# bbc

./: .gitignore  Cargo.toml  Makefile  README.md  flake.nix
.github/workflows/: pages.yml  release.yml
crates/bbc-bitwise/: Cargo.toml
crates/bbc-bitwise/src/: lib.rs
crates/bbc-calculus/: Cargo.toml
crates/bbc-calculus/src/: lib.rs
crates/bbc-cli/: Cargo.toml
crates/bbc-cli/src/: main.rs  repl.rs
crates/bbc-core/: Cargo.toml  build.rs
crates/bbc-core/src/: ast.rs  dim.rs  env.rs  error.rs  eval.rs  format.rs  latex.rs  lexer.rs  lib.rs  module.rs  parser.rs  units.rs  value.rs
crates/bbc-core/tests/: integration.rs
crates/bbc-linalg/: Cargo.toml
crates/bbc-linalg/src/: lib.rs
crates/bbc-symbolic/: Cargo.toml
crates/bbc-symbolic/src/: lib.rs
crates/bbc-wasm/: Cargo.toml
crates/bbc-wasm/src/: lib.rs
data/: biology.toml  common.toml  constants.toml  derived.toml  engineering.toml  imperial.toml  kitchen.toml  scientific.toml  webdev.toml
web/: index.html
