[package]
name = "bbc-core"
version.workspace = true
edition.workspace = true

[dependencies]
malachite = { workspace = true }
malachite-q = { workspace = true }
malachite-nz = { workspace = true }
malachite-base = { workspace = true }
thiserror = "2"
toml = "0.8"
serde = { version = "1", features = ["derive"] }
